Replacing sun.misc.BASE64Encoder/Decoder by java.util.Base64 (in php.dbgp).